# poc-poetry-github-actions

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.confidential/: ci.json  defaults.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
mywebsite/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_something.py
