[tool.poetry]
name = "x25"
version = "0.1.1"
description = ""
authors = ["Flavio Mendes <flavio@x25.com.br>"]

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.0.6"
confidential = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest-django = "^4.8.0"
pytest-xdist = "^3.6.1"
six          = "^1.16.0"

[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"
